@@ -212,6 +212,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16876: Optimize epoll.poll() by keeping a per-instance epoll events
+  buffer instead of allocating a new one at each poll().
+
 - Issue #16491: IDLE now prints chained exception tracebacks.
 
 - fcntl: add F_DUPFD_CLOEXEC constant, available on Linux 2.6.24+.
